--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -239,28 +239,60 @@ else "
   bottom: 100%;
 }
 /* Notifications */
+
 #notifications {
   position: fixed;
   top: 0;
-  left: 0;
+  height: 0;
+  text-align: center;
   right: 0;
+  left: 0;
+  transition: all .8s .6s cubic-bezier(.55, .055, .675, .19);
 }
-.fixed.top #notifications {
+.fixed.top #header-bar #notifications {
   position: absolute;
   top: 100%;
 }
 .notification {
-  display: block;
-  overflow: hidden;
-  width: 300px;
-  border: 1px solid;
-  #{if _conf['Sidebar Location'] is 'left' then 'margin-left: auto;' else ''}
+  color: white;
+  font-weight: 700;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, .5);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .15);
+  border-radius: 2px;
+  margin: 1px auto;
+  width: 500px;
+  max-width: 100%;
+  position: relative;
+  transition: all .25s ease-in-out;
 }
-.notification:not(:first-of-type) {
-  border-top: none;
+.notification.error {
+  background-color: hsla(0, 100%, 38%, .9);
 }
-.close {
-  float: right;
+.notification.warning {
+  background-color: hsla(36, 100%, 38%, .9);
+}
+.notification.info {
+  background-color: hsla(200, 100%, 38%, .9);
+}
+.notification.success {
+  background-color: hsla(104, 100%, 38%, .9);
+}
+.notification a {
+  color: white;
+}
+.notification > .close {
+  padding: 6px;
+  top: 0;
+  right: 5px;
+  position: absolute;
+  color: white;
+}
+.message {
+  #{Style.sizing}: border-box;
+  padding: 6px 20px;
+  max-height: 200px;
+  width: 100%;
+  overflow: auto;
 }
 /* Main Menu */
 #main-menu {
