--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -202,6 +202,15 @@ a {
 #shortcuts {
   float: right;
 }
+.shortcut::after {
+  content: "]";
+}
+.shortcut::before {
+  content: "[";
+}
+.shortcut {
+  margin-left: 3px;
+}
 #navbotright,
 #navtopright {
   display: none;
