--- a/src/General/css/layout.css
+++ b/src/General/css/layout.css
@@ -1264,11 +1264,6 @@ if _conf['Post Form Style'] isnt 'float' and _conf["Post Form Slideout Transitio
   max-width: 100%;
   min-width: 100%;
 }
-#dump-button {
-  width: 10%;
-  margin: 0;
-}
-
 #{
 if _conf['Compact Post Form Inputs'] then "
 .persona input.field {
@@ -1355,15 +1350,22 @@ input:not([type=radio]) {
   display: none;
 }
 #qr-no-file,
-.has-file #qr-filerm,
 .has-file #qr-filename {
   display: block;
 }
+.has-file #qr-filerm {
+  display: inline-block;
+}
 #qr-extras-container {
   position: absolute;
-  right: 3px;
-  top: 2px;
+  right: 0;
+  top: 0;
   z-index: 2;
+}
+#qr-extras-container > label,
+#qr-extras-container > a {
+  cursor: pointer;
+  margin-right: 3px;
 }
 #qr-filename-container {
   #{Style.sizing}: border-box;
@@ -1376,17 +1378,11 @@ input:not([type=radio]) {
   overflow: hidden;
   padding: 2px 1px 0;
 }
-/* Thread Select / Spoiler Label */
+/* Thread Select */
 #qr-thread-select {
   vertical-align: bottom;
   width: 49%;
   display: inline-block;
-}
-#qr-spoiler-label {
-  vertical-align: bottom;
-  width: 49%;
-  display: inline-block;
-  text-align: right;
 }
 /* Dumping UI */
 .dump #dump-list-container {
