Make .current bold

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -212,6 +212,9 @@ a {
 #toggleMsgBtn {
   display: none !important;
 }
+.current {
+  font-weight: bold;
+}
 /* 4chan X link brackets */
 .fourchanx-link::after {
   content: "]";
