--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -68,7 +68,6 @@ a {
 #fourchanx-settings,
 #qp, #ihover,
 #navlinks, .fixed #header-bar,
-#watcher,
 :root.float #updater,
 :root.float #thread-stats,
 #qr {
@@ -446,12 +445,22 @@ a.hide-announcement {
 
 /* Thread Watcher */
 #watcher {
+  position: absolute;
+}
+#watcher {
   padding-bottom: 3px;
   overflow: hidden;
   white-space: nowrap;
   min-width: 120px;
   max-height: 92%;
   overflow-y: auto;
+}
+:root.fixed-watcher #watcher {
+  position: fixed;
+}
+:root:not(.fixed-watcher) #watcher:not(:hover) {
+  max-height: 210px;
+  overflow-y: hidden;
 }
 #watcher > .move {
   padding-top: 3px;
