Restyle archiver options

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -381,12 +381,12 @@ a {
 .section-advanced textarea {
   height: 150px;
 }
-.section-advanced #archive-table {
-  margin-left: 0px;
-  text-align: left;
-}
 .section-advanced .archive-cell {
   min-width: 160px;
+  text-align: center;
+}
+.section-advanced #archive-board-select {
+  position: absolute;
 }
 .section-advanced .note {
   font-size: 0.8em; 
