Add Mistyped Captcha Errors option

--- a/src/General/css/style.css
+++ b/src/General/css/style.css
@@ -738,6 +738,9 @@ input.field.tripped:not(:hover):not(:focus) {
   width: 100%;
   margin: 1px 0 0;
 }
+.captcha-input.error:focus {
+  border-color: rgb(255,0,0) !important;
+}
 .field {
   -moz-box-sizing: border-box;
   margin: 0px;
