--- a/src/General/css/icons.vert.css
+++ b/src/General/css/icons.vert.css
@@ -69,7 +69,8 @@ div.navLinks > a:first-of-type::after {
 #boardNavDesktopFoot,
 #globalMessage,
 #watcher {
-  width: #{233 + Style.sidebarOffset.W}px !important;
+  #{Style.sizing}: border-box;
+  width: #{Style.sidebar}px !important;
   #{align}: 18px !important;
 }
 .fixed.top #header-bar#{if _conf['Pagination'] is 'top' or _conf['Pagination'] is 'sticky top' then ',\n.pagelist' else ''} {
