--- a/src/General/css/icons.vert.css
+++ b/src/General/css/icons.vert.css
@@ -70,7 +70,8 @@ div.navLinks > a:first-of-type::after {
 #globalMessage,
 #watcher {
   #{Style.sizing}: border-box;
-  width: #{Style.sidebar}px !important;
+  width: #{Style.sidebar - 18}px !important;
+  min-width: 230px;
   #{align}: 18px !important;
 }
 .fixed.top #header-bar#{if _conf['Pagination'] is 'top' or _conf['Pagination'] is 'sticky top' then ',\n.pagelist' else ''} {
