--- a/src/General/css/themeoptions.css
+++ b/src/General/css/themeoptions.css
@@ -60,7 +60,7 @@
     if _conf["Alternate Post Colors"]
       css += """
 .replyContainer:not(.hidden):nth-of-type(2n+1) .post {
-  background-image: #{agent}linear-gradient(#{if Style.lightTheme then "rgba(0,0,0,0.05), rgba(0,0,0,0.05)" else "rgba(255,255,255,0.02), rgba(255,255,255,0.02)"});
+  background-image: <%= agent %>linear-gradient(#{if Style.lightTheme then "rgba(0,0,0,0.05), rgba(0,0,0,0.05)" else "rgba(255,255,255,0.02), rgba(255,255,255,0.02)"});
 }\n
 """
 
